tdf#125661 : Let ScDocument::CopyTab use delayed...

...grouping introduced in commit

169a1b542165f3444791fd6e672d56d3fe48bd66
avoid possible expensive repetitive formula-group
changes (tdf#102364)

With this patch, sheet copy on the bug-document completes
in about 1m40s.

Change-Id: I5272f495aadab5f93f2698aba11cf2701a604c23